--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
